--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@repo/eslint-config",
+  "name": "@ignite-find-a-friend/eslint-config",
   "version": "0.0.0",
   "private": true,
   "files": [
-    "library.js",
-    "next.js",
-    "react-internal.js"
+    "node.js",
+    "next.js"
   ],
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
   "devDependencies": {
-    "@vercel/style-guide": "^5.1.0",
-    "eslint-config-turbo": "^1.11.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "typescript": "^5.3.3"
+    "@rocketseat/eslint-config": "2.2.2",
+    "eslint": "8.56.0",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "eslint-plugin-sort-keys": "2.3.5"
   }
 }
