--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
-      "dependsOn": ["^lint"]
+    },
+    "lint:fix": {
     },
     "dev": {
       "cache": false,
