--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@tsconfig/next": "2.0.1",
+    "@tsconfig/node20": "20.1.2"
   }
 }
