--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,3 +1,3 @@
 {
-  "extends": ["@ignite-find-a-friend/eslint-config/next"]
+  "extends": ["@ignite-find-a-friend/eslint-config/next", "plugin:@next/next/recommended"]
 }
