--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "node --import tsx --env-file .env.development src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
-    "fastify": "4.26.2"
+    "fastify": "4.26.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@ignite-find-a-friend/eslint-config": "workspace:*",
