--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,1 +1,9 @@
 PORT=3333
+
+POSTGRESQL_USERNAME=docker
+POSTGRESQL_PASSWORD=password
+POSTGRESQL_DATABASE=ignite-find-a-friend
+POSTGRESQL_HOST=localhost
+POSTGRESQL_PORT=5432
+
+DATABASE_URL="postgresql://docker:password@localhost:5432/ignite-find-a-friend?schema=public"
