chore(api): add prisma config

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -6,4 +6,4 @@ POSTGRESQL_DATABASE=ignite-find-a-friend
 POSTGRESQL_HOST=localhost
 POSTGRESQL_PORT=5432
 
-DATABASE_URL="postgresql://docker:password@localhost:5432/ignite-find-a-friend?schema=public"
+DATABASE_URL="postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOST}:${POSTGRESQL_PORT}/${POSTGRESQL_DATABASE}?schema=public"
