chore(api): add dependency @prisma/client

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
+    "@prisma/client": "5.10.2",
     "dotenv": "16.4.5",
     "dotenv-expand": "11.0.6",
     "fastify": "4.26.2",
