chore(api): add prepare script to generate prisma client

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prepare": "prisma generate",
     "dev": "pnpm run services:up && tsx --env-file .env.development src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
