--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "prepare": "prisma generate",
-    "dev": "pnpm run services:up && tsx --env-file .env.development src/server.ts",
+    "dev": "pnpm run services:up && tsx --watch --env-file .env.development src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "services:up": "docker compose up -d",
     "services:down": "docker compose down",
     "services:stop": "docker compose stop",
-    "migrate:dev": "dotenv -f .env.development -- pnpm prisma migrate dev"
+    "migrate:dev": "dotenv -f .env.development -- pnpm prisma migrate dev",
+    "test": "vitest run --dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http"
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
@@ -25,10 +27,15 @@
     "@ignite-find-a-friend/eslint-config": "workspace:*",
     "@ignite-find-a-friend/typescript-config": "workspace:*",
     "@types/node": "20.10.6",
+    "@types/supertest": "6.0.2",
     "eslint": "8.56.0",
     "prisma": "5.10.2",
+    "supertest": "6.3.4",
     "tsx": "4.7.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "1.3.1",
+    "vitest-environment-prisma": "link:./prisma/vitest-environment-prisma"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
