--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,14 +15,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "14.0.4",
     "@ignite-find-a-friend/eslint-config": "workspace:*",
     "@ignite-find-a-friend/typescript-config": "workspace:*",
+    "@next/eslint-plugin-next": "14.0.4",
     "@types/eslint": "8.56.1",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.18",
     "eslint": "8.56.0",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
 }
