--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.18",
     "eslint": "8.56.0",
     "postcss": "8.4.35",
+    "prettier-plugin-tailwindcss": "0.5.12",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   }
