--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,16 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-select": "2.0.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "lucide-react": "0.358.0",
     "next": "14.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.2.2",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@ignite-find-a-friend/eslint-config": "workspace:*",
