--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "lint:fix": "turbo lint:fix"
+    "lint:fix": "turbo lint:fix",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "9.0.11",
     "turbo": "1.12.4"
   },
   "packageManager": "pnpm@8.15.4",
