--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.2.1",
+    "@commitlint/config-conventional": "19.1.0",
+    "@commitlint/types": "19.0.3",
     "husky": "9.0.11",
     "turbo": "1.12.4"
   },
